# evegen

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README.md  compile_commands.json  configure.ac  debug.sh  devToolsConsole.py  devToolsWindow.py  devtools.py  devtools.raw  insider.py
cmake/: FindMariaDBClient.cmake
m4/: mysql.m4
patches/: EVEMuDisableTutorial.py  EVEMuPhotoUpload.py  EnableChatSlash.py  FixGMMenu.py  news.py
patches/disabled/: EnableDebugSvc.py  OnRemoteExecDisableSignCheck.py
src/: db.cpp  db.h  devtools.cpp  devtools.h  main.cpp  makedevtools.def  patch.cpp  patch.h  stb_c_lexer.h
